--- a/SMPD/lab01/Lab01.ipynb
+++ b/SMPD/lab01/Lab01.ipynb
@@ -107,7 +107,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "244b1d3a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -349,14 +351,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./dataset/dane.npz\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      4\u001b[0m     budget_data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(f)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Województwo z największym wzrostem: PODLASKIE (612.33 zł/osoba)\n",
+      "Województwo z najmniejszym wzrostem: DOLNOŚLĄSKIE (272.98 zł/osoba)\n"
      ]
     }
    ],
@@ -474,7 +473,7 @@
    "name": "Robert Susik"
   },
   "kernelspec": {
-   "display_name": "Python 3.13.1 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
